tests/run/error_discard_ptr_leak.out
tests/run/error_discard_ptr_leak.em:12:5: error: '_' is a 'Ptr' opened but not closed on this path
tests/run/error_discard_ptr_leak.em:12:5: help: a 'Ptr' is a linear FFI handle with no destructor — close it on every path (e.g. fclose(it)) or return it to transfer ownership to the caller
tests/run/error_discard_ptr_leak.em:11:5: note: opened here
